# 01

./: .gitignore  AGENT_UPGRADE_FINAL_REPORT.md  AGENT_UPGRADE_TEST_REPORT.md  CONTEXT7_SETUP_REPORT.md  DEEPSEEK_API_GUIDE.md  DEEPSEEK_DYNAMIC_TOKEN_GUIDE.md  DEEPSEEK_SIMPLE_GUIDE.md  IMPLEMENTATION_GUIDE.md  LOCAL_INSTALLATION_GUIDE.md  MCP_CURRENT_STATUS_GUIDE.md  MCP_FIX_REPORT.md  MCP_STATUS_FINAL_REPORT.md  MCP_TEST_REPORT.md  PYTHON_INSTALLATION_GUIDE.md  PYTHON_MCP_RESTORE_SUCCESS_REPORT.md  README.md  STATUSBAR_DYNAMIC_FIX_REPORT.md  TROUBLESHOOTING.md  USER_GUIDE.md  WEB_SCRAPING_MCP_GUIDE.md  agentflow-status.cmd  auto_maintenance.sh  claude.bat  claude.cmd  claude.ps1  claude_fixed.cmd  claude_unified.cmd  claude_wrapper.sh  copy_to_local.py  debug_dzh_response.py  deepseek_lite.py  deepseek_mcp_integration.py  deepseek_mcp_server.py  deepseek_token_manager.py  ds.cmd  dt.cmd  dzh_deepseek_complete.py  dzh_deepseek_test.py  fix_agents.py  fix_env.bat  (+41 more)
%USERPROFILE%/deepseek_local/: deepseek_helper.py  settings.local.json  start_local.cmd
.claude/: claude_desktop_config.json  current_mode.txt  settings.json  settings.local.json  statusline_cycle.bat  statusline_dynamic.bat
.claude/commands/: mcp.md
ai-engineer-framework/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai-engineer-framework/configs/: default.yaml
ai-engineer-framework/scripts/: start.py
ai-engineer-framework/src/: main.py
ai-engineer-framework/src/api/routes/: __init__.py  llm.py  rag.py
ai-engineer-framework/src/models/: __init__.py  agents.py  embeddings.py  llm.py  multimodal.py  rag.py
ai-engineer-framework/src/services/: __init__.py  cost_optimizer.py  factory.py  monitoring_service.py
examples/: basic_usage.py
src/ai_platform/: __init__.py  cli.py
src/ai_platform/ai/: __init__.py  anthropic.py  base.py  manager.py  openai.py
src/ai_platform/api/: __init__.py  app.py  middleware.py  routes.py
src/ai_platform/core/: __init__.py  config.py  exceptions.py  models.py
src/ai_platform/services/: __init__.py  ai_service.py
tests/: conftest.py
tests/ai/: test_anthropic_provider.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_config.py  test_models.py
