[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engineer-framework"
version = "0.1.0"
description = "现代AI工程化框架 - 集成多LLM提供商、RAG系统、Agent和多模态能力"
authors = [
    {name = "AI Engineer Team", email = "ai-engineer@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心LLM集成
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "accelerate>=0.24.0",

    # RAG和向量数据库
    "chromadb>=0.4.18",
    "pinecone-client>=2.2.4",
    "weaviate-client>=3.25.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "unstructured>=0.11.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",

    # Agent框架
    "langchain-core>=0.3.0",
    "langchain-community>=0.0.10",
    "crewai>=0.26.0",
    "autogen>=0.2.0",
    "llama-index>=0.9.0",

    # API和Web
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",

    # 数据处理
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "pyarrow>=13.0.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",

    # 监控和日志
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "sentry-sdk>=1.38.0",

    # 多模态支持
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "whisper>=1.1.10",
    "pytesseract>=0.3.10",

    # 工具库
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.6.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

production = [
    "gunicorn>=21.2.0",
    "redis-py-cluster>=2.1.3",
    "psycopg2-binary>=2.9.7",
    "boto3>=1.29.0",
]

[project.scripts]
ai-engineer = "ai_engineer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "W", "N", "UP", "C90", "B", "A", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PT", "RUF"]
ignore = ["E501", "B008", "A003"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]